First commited as before_14810_rev1